--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
+    "sass": "^1.97.3",
     "typescript": "^5"
   },
   "lint-staged": {
